# Hum_Safar_Hai

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: .env  .gitignore  README.md  app.py  main.py  requirements.txt  setup.sh
backend/FI money dummy data/: FI_MONEY_DATA_DOCUMENTATION.md  combined_goals.json  readme.md
backend/adk_run/: __init__.py  agent.py
backend/evaluation/: demo_evaluation.py  evaluation_dataset.json  exhaustive_test_runner.py  run_evaluation.py
backend/evaluation/result/: ev_result_20250723_094432.json
backend/notebook/: 01_understad.ipynb  02_google_adk.ipynb  03_adk_finace subagent.ipynb  04_adk_finacesubtool.ipynb  connecting_mcp.ipynb  evaltiion.py  notebook_adk.txt
backend/src/: __init__.py  fi_mcp_data_access.py
backend/src/agents/: __init__.py  expense_agent.py  financial_health_auditor_agent.py  financial_integrity_agent.py  general_knowledge_agent.py  goal_investment_strategy_agent.py  investment_agent.py  loan_agent.py  net_worth_agent.py
backend/src/orchestration/: __init__.py  adk_orchestrator.py
backend/src/tools/: __init__.py  financial_tools.py
backend/tests/: test_client.py  test_create_goal_functionality.py  test_data_accuracy_validation.py  test_expense_agent.py  test_financial_health_auditor_agent.py  test_goal_investment_strategy_agent.py  test_investment_agent.py  test_loan_agent.py  test_net_worth_agent.py  test_phase1.py  test_phase2.py  test_phase3.py  test_tools_api.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/docs/: blueprint.md
(+18 files in other folders)
